--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: quizapp2
+name: wordPuzzle
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -63,7 +63,7 @@ dev_dependencies:
 flutter_icons:
   android: true 
   ios: true
-  image_path: "assets/GeneralImages/logo_quiz_app_2.png"
+  image_path: "assets/GeneralImages/word_puzzle.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
